# pickls-zed

./: Cargo.toml  README.md  extension.toml
src/: lib.rs
